# SPODCopyTool

./: .gitignore  LICENSE  README.md  SPODCopyTool.spec  main.py  pyproject.toml
.state/: job-0ef9733d2ab4.json
graph_client/: __init__.py  directory_client.py  drive_client.py  graph_client.py  graph_common.py  transfer_manager.py
http_utils/: http_utils.py
ui/: app.py  controller.py  state_store.py
